[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpuoffloader"
version = "0.1.0"
description = "vLLM plugin: Qwen3MoE CPU expert offload + ping-pong buffering"
requires-python = ">=3.9"
dependencies = [
  "vllm",        # pin in your environment as needed
  "torch",
]

[project.entry-points."vllm.general_plugins"]
cpuoffloader = "cpuoffloader:register"
